<resources>
    <string name="app_name">AirCheck</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="title_activity_rate">RateActivity</string>


    <string name="radio_1">coughing</string>
    <string name="radio_2">itchy-eyes</string>
    <string name="radio_3">nasal-obstruction</string>
    <string name="radio_4">shortness-of-breath</string>
    <string name="radio_5">sneezing</string>
    <string name="radio_6">wheezing</string>


</resources>
