<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"

    android:orientation="horizontal"


    tools:context="com.example.genesis.aircheck.FormActivity"
    tools:showIn="@layout/activity_form">

    <LinearLayout

        android:layout_weight="50"
        android:gravity="left|top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Symptoms"
            android:id="@+id/textView" />



        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_2" />

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_3" />

            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_4" />

            <RadioButton
                android:id="@+id/radio_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_6" />

            <RadioButton
                android:id="@+id/radio_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_2" />

        </RadioGroup>


        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Rate the Symptoms"
            android:id="@+id/textView3" />

        <LinearLayout
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="Mild"

                android:drawableBottom="@drawable/a"
                android:gravity="center_horizontal"
                android:layout_weight="33"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/bt1" />

            <Button
                android:text="Medium"


                android:drawableBottom="@drawable/b"
                android:gravity="center_horizontal"
                android:layout_weight="33"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/bt2" />

            <Button
                android:text="Severe"
                android:drawableBottom="@drawable/c"
                android:gravity="center_horizontal"
                android:layout_weight="33"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:id="@+id/bt3" />
        </LinearLayout>
        <Button
            android:text="Submit"



            android:gravity="center_horizontal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit" />

    </LinearLayout>




</LinearLayout>
</ScrollView>